depedencias so com 2 depedentes, pastparticiple to verbo, propriedades so PRE e POST, querys mais rapidas na verificaçao se ja existe uma palavra ou uma coocorrencia

--- a/DeepExtractor/build.xml
+++ b/DeepExtractor/build.xml
@@ -63,10 +63,10 @@
 	    	<arg value="/Users/josecorreia/Projects/Parte01aaa.xml"/>
 		</java>
 	</target>
-	<target name="runElementary" depends="main" description="run" >
+	<target name="runW8" depends="main" description="run" >
 		    <java classname="${main}" fork="true">
 				<classpath refid="classpath"/>
-		    	<arg value="/home/josecorreia/Projects/Parte01aaa.xml"/>
+		    	<arg value="C:\Users\ze_mi_000\Projects\Parte01aaa.xml"/>
 			</java>
 		</target>
 	
