--- a/DeepExtractor/.classpath
+++ b/DeepExtractor/.classpath
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/josecorreia/Projects/DeepExplorer/DeepExtractor/lib/mysql-connector-java-5.1.34-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/ze_mi_000/Projects/deepexplorer/DeepExtractor/lib/junit-4.8.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/ze_mi_000/Projects/deepexplorer/DeepExtractor/lib/mysql-connector-java-5.1.34-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
