--- a/DeepExtractor/build.xml
+++ b/DeepExtractor/build.xml
@@ -57,17 +57,22 @@
     <target name="main" depends="clean,build,compress"/>
 	<target name="mainJD" depends="clean,build,compress,javadoc"/>
 	
- 	<target name="run0" depends="main" description="run" >
+ 	<target name="runParte1" depends="main" description="run" >
 	    <java classname="${main}" fork="true">
 			<classpath refid="classpath"/>
-	    	<arg value="/Users/josecorreia/Projects/CETEMPublico"/>
-	    	<!--<arg value="/Users/josecorreia/Projects/Parte01aaa.xml"/>-->
+	    	<arg value="/Users/josecorreia/Projects/Parte1"/>
 		</java>
 	</target>
+	<target name="runTudo" depends="main" description="run" >
+		    <java classname="${main}" fork="true">
+				<classpath refid="classpath"/>
+		    	<arg value="/Users/josecorreia/Projects/CETEMPublico"/>
+			</java>
+		</target>
 	<target name="runXub" depends="main" description="run" >
 		    <java classname="${main}" fork="true">
 				<classpath refid="classpath"/>
-		    	<arg value="/home/josecorreia/Projects/Parte01aaa.xml"/>
+		    	<arg value="/home/josecorreia/Projects/Parte1"/>
 			</java>
 	</target>
 	<target name="runW8" depends="main" description="run" >
