build.xml update

--- a/DeepExtractor/build.xml
+++ b/DeepExtractor/build.xml
@@ -69,10 +69,16 @@
 		    	<arg value="/Users/josecorreia/Projects/CETEMPublico"/>
 			</java>
 		</target>
-	<target name="runXub" depends="main" description="run" >
+	<target name="runLinParte1" depends="main" description="run" >
+			    <java classname="${main}" fork="true">
+					<classpath refid="classpath"/>
+			    	<arg value="/home/masp/josecorreia/Projects/Parte1"/>
+				</java>
+	</target>
+	<target name="runLin" depends="main" description="run" >
 		    <java classname="${main}" fork="true">
 				<classpath refid="classpath"/>
-		    	<arg value="/home/josecorreia/Projects/Parte1"/>
+		    	<arg value="/home/masp/josecorreia/Projects/CETEMPublico"/>
 			</java>
 	</target>
 	<target name="runW8" depends="main" description="run" >
