--- a/DeepExtractor/build.xml
+++ b/DeepExtractor/build.xml
@@ -68,23 +68,16 @@
         <arg value="/Users/josecorreia/Projects/Parte1"/>
     </java>
 </target>
-    <target name="runParte1Medidas" depends="main" description="run" >
+    <target name="runMedidasMac" depends="main" description="run" >
         <java classname="${main1}" fork="true">
             <classpath refid="classpath"/>
             <arg value="/Users/josecorreia/Projects/DB/"/>
         </java>
     </target>
-	<target name="runCasaParte1" depends="main" description="run" >
-		<java classname="${main}" fork="true">
-			<classpath refid="classpath"/>
-			<arg value="/home/josecorreia/Projects/DB/"/>
-			<arg value="/home/josecorreia/Projects/Parte1"/>
-		</java>
-	</target>
 	<target name="runTudo" depends="main" description="run" >
 		    <java classname="${main}" fork="true">
 				<classpath refid="classpath"/>
-		    	<arg value="/Users/josecorreia/Projects/DB_site/"/>
+		    	<arg value="/Users/josecorreia/Projects/DB/"/>
 				<arg value="/Users/josecorreia/Projects/CETEMPublico"/>
 			</java>
 		</target>
