--- a/DeepExtractor/build.xml
+++ b/DeepExtractor/build.xml
@@ -68,6 +68,13 @@
         <arg value="/Users/josecorreia/Projects/Parte1"/>
     </java>
 </target>
+	<target name="runParte1Inesc" depends="main" description="run" >
+		<java classname="${main}" fork="true">
+			<classpath refid="classpath"/>
+			<arg value="/afs/l2f/home/jcorreia/Projects/DB/"/>
+			<arg value="/afs/l2f/home/jcorreia/Projects/Parte1/"/>
+		</java>
+	</target>
     <target name="runMedidasMac" depends="main" description="run" >
         <java classname="${main1}" fork="true">
             <classpath refid="classpath"/>
